Update dev dependencies

--- a/package.json
+++ b/package.json
@@ -38,14 +38,13 @@
     "vscode:prepublish": "npm run build -- --minify"
   },
   "devDependencies": {
+    "@remcohaszing/eslint": "^11.0.0",
     "@types/mdast": "^4.0.0",
-    "@types/node": "^20.0.0",
+    "@types/node": "^22.0.0",
     "@types/vscode": "^1.0.0",
-    "@vscode/vsce": "^2.0.0",
+    "@vscode/vsce": "^3.0.0",
     "character-entities": "^2.0.0",
-    "esbuild": "^0.19.0",
-    "eslint": "^8.0.0",
-    "eslint-config-remcohaszing": "^10.0.0",
+    "esbuild": "^0.25.0",
     "mdast-util-from-markdown": "^2.0.0",
     "mdast-util-frontmatter": "^2.0.0",
     "mdast-util-gfm": "^3.0.0",
@@ -53,10 +52,10 @@
     "micromark-extension-frontmatter": "^2.0.0",
     "micromark-extension-gfm": "^3.0.0",
     "micromark-extension-mdxjs": "^3.0.0",
-    "ovsx": "^0.8.0",
+    "ovsx": "^0.10.0",
     "prettier": "^3.0.0",
-    "remark-cli": "^11.0.0",
-    "remark-preset-remcohaszing": "^2.0.0",
+    "remark-cli": "^12.0.0",
+    "remark-preset-remcohaszing": "^3.0.0",
     "typescript": "^5.0.0",
     "unist-util-visit-parents": "^6.0.0"
   }
