--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: 20
       - run: npm ci
-      - run: npx eslint .
+      - run: npx eslint
 
   package:
     runs-on: ubuntu-latest
@@ -26,7 +26,7 @@ jobs:
           node-version: 20
       - run: npm ci
       - run: npx vsce package
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           name: package
           path: '*.tgz'
